--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,3 +1,8 @@
 .br{
     border-radius: 1.5rem !important;
 }
+@media screen and (max-width: 600px) {
+    .br{
+        display: none !important;
+    }
+  }
