--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -4,3 +4,7 @@
         margin-right: -3rem !important;
     }
   }
+.spe{
+    /* background-color: aqua !important; */
+    animation-duration: 1s !important;
+}  
