--- a/src/components/Login.css
+++ b/src/components/Login.css
@@ -1,5 +1,7 @@
 .br{
     border-radius: 1.5rem !important;
+    height: 2.3rem !important;
+    width: 5.8rem !important;
 }
 @media screen and (max-width: 600px) {
     .br{
