--- a/src/components/Content.css
+++ b/src/components/Content.css
@@ -7,6 +7,9 @@
       margin-top: 4rem !important;
     }
   }
+  .pointer{
+    cursor: pointer !important;
+  }
 .spe{
     animation-duration: 1s !important;
 }  
